# sid

./: .gitignore  .rstcheck.cfg  .rumdl.toml  README.md  docgraph.toml  graph.json  main.py  pyproject.toml
.claude/commands/: concept-interview.md  fr-nr-extraction.md
doc/: Makefile  conf.py  constitution.rst  index.md  index.rst
doc/adr/: 0001-language-runtime.rst  0002-communication-pattern.rst  0003-state-management.rst  0004-data-persistence.rst  0005-authentication-method.rst  0006-architecture-style.rst  0007-authentication-provider.rst  0008-network-strategy.rst  constitution.md  constitution.rst  index.md  index.rst  template.rst
doc/adr/decisions/: architecture-style.md  architecture-style.rst  authentication-method.md  authentication-method.rst  authentication-provider.md  authentication-provider.rst  cicd-platform.md  cicd-platform.rst  communication-pattern.md  communication-pattern.rst  data-persistence.md  data-persistence.rst  deployment-strategy.md  deployment-strategy.rst  iac-tool-selection.md  iac-tool-selection.rst  language-runtime.md  language-runtime.rst  network-strategy.md  network-strategy.rst  state-management.md  state-management.rst
doc/arch/: constitution.md  constitution.rst  index.md  index.rst
doc/arch/views/: building-block-view.md  building-block-view.rst  constraints.md  constraints.rst  context-view.md  context-view.rst  cross-cutting-concepts.md  cross-cutting-concepts.rst  deployment-view.md  deployment-view.rst  (+6 more)
doc/spec/: constitution.md  index.md  index.rst  overview.md  style.md
templates/: actor.md  constraint.md
(+114 files in other folders)
