[project]
name = "sid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sphinx>=9.1.0",
    "sphinx-markdown-builder>=0.6.9",
    "sphinxcontrib-mermaid>=1.2.3",
]

[dependency-groups]
dev = [
    "doc8>=2.0.0",
    "rstcheck>=6.2.5",
]

[tool.doc8]
max-line-length = 200
ignore-path = ["doc/_build"]
